--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -19,9 +19,10 @@
     float: left;
 
     &,
-    &:visited {
-        color: $grey-color-dark;
-    }
+ /*    &:visited {
+  *      color: $grey-color-dark;
+  */   
+        }
 }
 
 .site-nav {
@@ -46,7 +47,7 @@
         position: absolute;
         top: 9px;
         right: $spacing-unit / 2;
-        background-color: $background-color;
+/*        background-color: $background-color; */
         border: 1px solid $grey-color-light;
         border-radius: 5px;
         text-align: right;
