--- a/_sass/components/_panels.scss
+++ b/_sass/components/_panels.scss
@@ -36,7 +36,7 @@
 .panel-cover {
   display: block;
   position: fixed;
-  z-index: 900;
+ /* z-index: 900; */
   width: 100%;
   max-width: none;
   height: 100%;
